Wed Nov 22 19:34:29 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/VC8ProjectCreator.pm:
        * modules/VC8WebWorkspaceCreator.pm:
        * modules/VC8WorkspaceCreator.pm:
        * modules/WorkspaceCreator.pm:

          Removed the scope keyword, webapp, from the workspace and added a
          new project keyword named webapp.  If webapp is set to 1 in the
          project, it will be considered a Web Application, will not have a
          project file written for it and will be included in the workspace
          all if the project type supports Web Applications.  Currently,
          only the vc8 project type supports them.

Wed Nov 22 13:44:33 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * docs/MPC.sgml:
        * docs/USAGE:
        * modules/Driver.pm:

          Added the ability to set the default type in the  MPC
          configuration file.

        * docs/README:
        * modules/VC7WorkspaceCreator.pm:
        * modules/VC8WebWorkspaceCreator.pm:
        * modules/VC8WorkspaceCreator.pm:
        * modules/WorkspaceCreator.pm:

          Added a new scope keyword, webapp, to allow users to specify web
          application directories.  Any directory specified within a webapp
          scope will be considered as a web application directory.
          Currently only the vc8 project type supports web application
          directories.

        * modules/ConfigParser.pm:

          Disallow empty names within the base configuration file (i.e.,
          $VAR that evaluates to empty).

Wed Nov 22 10:34:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/BMakeWorkspaceCreator.mpc:
          Give the workspace a .bmak extension when using make_coexistence and
          simplified workspace_file_name()

        * templates/bmake.mpd: